2012-01-24  Joel Brobecker  <brobecker@adacore.com>

	* version.in: Set version to 7.4.0.20120124-cvs.

2012-01-24  Joel Brobecker  <brobecker@adacore.com>

	GDB 7.4 released.

2012-01-24  Joel Brobecker  <brobecker@adacore.com>

	* NEWS: Change "since GDB 7.3.1" into "in GDB 7.4".

2012-01-24  Joel Brobecker  <brobecker@adacore.com>

	* version.in: Update GDB version number to 7.4.

2012-01-14  Doug Evans  <dje@google.com>

	Restore "mt set python print-stack on|off" for 7.4.
	* NEWS: Update to indicate "mt set python print-stack" is deprecated,
	but not deleted yet, and will be gone in gdb 7.5.
	* python/python.c (maint_set_python_list, maint_show_python_list):
	New global vars.
	(maint_set_python, maint_show_python): New functions.
	(gdbpy_should_print_stack_deprecated): New global var.
	(set_maint_python_print_stack): New function.
	(show_maint_python_print_stack): New function.
	(_initialize_python): Define commands
	"mt set python print-stack on|off" and ""mt show python print-stack".

2012-01-13  Eli Zaretskii  <eliz@gnu.org>

	* gdb_curses.h (MOUSE_MOVED) [__MINGW32__]: Undefine before
	including curses.h.

2012-01-12  Pedro Alves  <palves@redhat.com>

	* i386-tdep.c (i386_frame_cache_1): Also mark the frame base as
	available when %ebp is found to be zero (outermost).

2012-01-10  Doug Evans  <dje@google.com>

	* dwarf2read.c (dwarf_decode_lines): Remove arg "abfd".  New arg
	"want_line_info".  All callers updated.
	(dwarf_decode_lines_1): New function.
	(handle_DW_AT_stmt_list): Add function comment.
	New arg "want_line_info".  All callers updated.
	(read_file_scope,read_type_unit_scope): Move comment from
	handle_DW_AT_stmt_list to here.

2012-01-06  Joel Brobecker  <brobecker@adacore.com>

	* version.in: Set version to 7.3.92.20120106-cvs.

2012-01-06  Joel Brobecker  <brobecker@adacore.com>

	GDB 7.3.92 released.

2012-01-06  Joel Brobecker  <brobecker@adacore.com>

	* version.in: Update GDB version number to 7.3.92.
