@@ -1,3 +1,8 @@
+2012-02-21  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* configure: Regenerate.
+	* config.in: Regenerate.
+
 2012-01-24  Joel Brobecker  <brobecker@adacore.com>
 
 	* version.in: Set version to 7.4.0.20120124-cvs.
